# jeffistores-labs

./: .gitignore  Makefile  README.md  ROADMAP.md  posting_strategy.md  pyproject.toml
configs/: phi3_qlora_v1.yaml  phi3_qlora_v2_dora.yaml
data/: README.md
experiments/01_micrograd/: 01_value_and_autograd.ipynb  02_description_classifier.ipynb  02_topological_backward.ipynb  03_neuron_layer_mlp.ipynb  NOTES.md  README.md  iris_with_micrograd.ipynb  jeffi_descriptions.csv  jeffi_products_with_micrograd.ipynb  micrograd_solo.py
experiments/01_micrograd/tests/: test_micrograd.py
experiments/02_makemore/: 01_bigram.ipynb  02_bigram_nn.ipynb  03_mlp.ipynb  04_batchnorm.ipynb  05_wavenet.ipynb  NOTES.md  README.md
experiments/04_jeffi_descgen/: 01_dataset_and_baselines.ipynb  PHASES.md  PLAN.md  RESULTS_v1_vs_v2.md
experiments/04_jeffi_descgen/runs/: phi3-qdora-v2.jsonl  phi3-qlora-v1.jsonl
notebooks/: 00_explore_jeffi_data.ipynb
scripts/: 01_export_dataset.py  02_eval_baselines.py  03_train_qlora.py  05_eval_finetune.py  06_compare_runs.py  bootstrap_ubuntu.sh  replicate_jeffi.sh  sync_incremental.sh
scripts/content/: README.md  gen_audio.py  gen_image.py  gen_video.py  make_post.py  script_trl_bisect.yaml
scripts/systemd/: install_systemd_timer.sh  jeffi-replicate.service  jeffi-replicate.timer
src/jeffistores_labs/: __init__.py  db.py
src/jeffistores_labs/descgen/: __init__.py  baselines.py  dataset.py  eval.py  train.py
systemd/: jeffi-incremental-sync.service  jeffi-incremental-sync.timer
