[project]
name = "jeffistores-labs"
version = "0.0.1"
description = "Experimental ML/LLM lab tied to Jeffi Stores"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core ML
    "torch>=2.4.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    # Notebooks
    "jupyter>=1.0",
    "ipykernel>=6.29",
    # Utilities
    "tqdm>=4.66",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Add later as we hit each week
hf = [
    "transformers>=4.44",
    "datasets>=2.21",
    "accelerate>=0.34",
    "peft>=0.13",
    "trl>=0.11",
    "sentencepiece>=0.2",
]
track = [
    "wandb>=0.18",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[tool.uv]
# uv will pick the right torch wheel for the platform automatically.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jeffistores_labs"]
